--- a/url-splitter/requirements.txt
+++ b/url-splitter/requirements.txt
@@ -1,12 +1,7 @@
-blinker==1.9.0
-click==8.2.1
-Flask==3.1.1
-flask-cors==6.0.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.3
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-SQLAlchemy==2.0.41
-typing_extensions==4.14.0
-Werkzeug==3.1.3
+Flask==2.3.3
+Flask-CORS==4.0.0
+Flask-SQLAlchemy==3.0.5
+psycopg2-binary==2.9.7
+SQLAlchemy==2.0.21
+Werkzeug==2.3.7
+gunicorn==21.2.0
