--- a/url-splitter/requirements.txt
+++ b/url-splitter/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.2.5
 Flask-CORS==4.0.0
 Flask-SQLAlchemy==2.5.1
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 SQLAlchemy==1.4.53
 Werkzeug==2.2.3
 gunicorn==20.1.0
